--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
                     </div>
                 </div>
             </div>
+            <div id="alert">
+                Order Placed Successfully
+            </div>
             <button onclick="bookNow()" class="btn-style">Book Now</button>
         </div>
 
